<resources>
    <string name="app_name">TO DO</string>
    <string name="label_task">Tarefas</string>
    <string name="label_title">Título</string>
    <string name="label_data">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_new_task">Criar tarefa</string>
    <string name="label_new_task_principal">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui\nnenhuma tarefa</string>
</resources>