    <?Xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Criar Tarefas"
            app:navigationIcon="@drawable/ic_navigate"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/label_title"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/label_data"
                app:startIconDrawable="@drawable/ic_calendar"
                app:layout_constraintTop_toBottomOf="@id/til_title"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toStartOf="@id/til_hour"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hour"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:hint="@string/label_hour"
            app:startIconDrawable="@drawable/ic_timer"
            app:layout_constraintTop_toTopOf="@id/til_date"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toEndOf="@id/til_date"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/label_cancel"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/btn_new_task">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/label_new_task"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent">

    </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>